--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+/* Custom Utilities */
+
+.heading {
+  @apply text-xl sm:text-2xl md:text-4xl font-bold;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.subheading {
+  @apply text-lg sm:text-xl md:text-2xl;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.paragraph {
+  @apply text-sm sm:text-base;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.button {
+  @apply border border-red-500 bg-transparent text-black
+    hover:bg-red-500 w-fit hover:text-white hover:border-transparent
+    px-4 py-2;
+}
+
+.nav-link {
+  @apply text-base sm:text-lg md:text-xl;
 }
